gcc/testsuite/gdc.test/fail_compilation/dip25flag.d
/*
REQUIRED_ARGS: -de -dip25
TEST_OUTPUT:
---
Deprecation: `-dip25` no longer has any effect
---
*/
